releases/v1.7/README.md
# 📱 브레인롯 수학게임 v1.7 - 새로운 앱 아이콘 적용

## 🎯 **v1.7 주요 변경사항**

### 🎨 **새로운 앱 아이콘**
- **앱아이콘.png** 파일로 앱 아이콘 변경
- PNG 포맷으로 더 깔끔한 아이콘 품질
- 모든 해상도 지원 (mdpi, hdpi, xhdpi, xxhdpi, xxxhdpi)
- 어댑티브 아이콘 지원 (Android 8.0+)

### 🔧 **기술적 개선사항**
- PNG 이미지 포맷으로 아이콘 최적화
- 더 선명한 앱 아이콘 렌더링
- 어댑티브 아이콘 배경색 유지 (#ffffff)

## 📦 **릴리즈 정보**
- **파일명**: `math_game_v1.7.apk`
- **파일크기**: 24.1MB
- **빌드일자**: 2025-07-12
- **최소 Android 버전**: Android 5.0 (API 21)

## 🎮 **기존 기능들 (v1.6까지)**

### 🧠 **스마트 추출 시스템**
- **비복원추출**: 중복 캐릭터 방지 (도감 미완성 시)
- **복원추출**: 100% 완성 후 무한 플레이 모드
- **실시간 진행률**: 도감 완성 상태 표시

### 📊 **게임 시스템**
- **점수 기준**: 8점 이상 획득 시 캐릭터 보상
- **히트 시스템**: 연속 정답으로 점수 배율 증가
- **차트 코드**: 특별 캐릭터 획득 (111111, 222222, 333333, 000000, 999999)

### 🖼️ **캐릭터 시스템**
- **41개 브레인롯 캐릭터**: 이탈리아 브레인롯 밈 캐릭터들
- **캐릭터 정보 저장**: 고화질 캐릭터 카드 이미지 갤러리 저장
- **도감 시스템**: 수집한 캐릭터 확인 및 관리

## 🎯 **플레이 방법**

### 1. 기본 게임플레이
1. 화면에 나타나는 수학 문제를 풀어보세요
2. 정답을 연속으로 맞히면 점수 배율이 증가합니다
3. 8점 이상 획득하면 캐릭터 보상을 받을 수 있습니다

### 2. 캐릭터 수집
- **신규 캐릭터 우선**: 처음에는 아직 얻지 못한 캐릭터가 나옵니다
- **진행률 확인**: 상단에 "📚 도감 진행: X/41 (신규 캐릭터 우선)" 표시
- **도감 완성**: 모든 캐릭터 수집 시 "🎉 도감 완성! (복원추출 모드)" 표시

### 3. 차트 코드 활용
- **111111**: 가라마라라마라라만 단 마두둥둥 탁 툰퉁 퍼르쿤퉁
- **222222**: 오 딘딘딘딘 둔 마 딘딘딘 둔
- **333333**: 타 타 타 타 타 타 타 타 타 타 타 사후르
- **000000**: 퉁 퉁 퉁 퉁 퉁 퉁 퉁 퉁 퉁 사후르
- **999999**: 트리피 트로피1

### 4. 이미지 저장
- **보상 화면**: "캐릭터 정보 저장" 버튼으로 캐릭터 카드 저장
- **도감 화면**: 각 캐릭터별 "캐릭터 정보 저장" 버튼 활용
- **저장 위치**: 갤러리 앱에서 확인 가능

## 🔍 **캐릭터 목록**
총 41개의 이탈리아 브레인롯 캐릭터들:

1. 가라마라라마라라만 단 마두둥둥 탁 툰퉁 퍼르쿤퉁
2. 고릴로 워터멜론드릴로
3. 그라이푸시 메두시
4. 글로르보 프루토드릴로
5. 라 바카 사투르노 사투르니타
6. 리노 토스트리노
7. 리릴리 라릴라
8. 마카키니 바나니니
9. 바나니타 돌피니타
10. 발레리나 카푸치나
11. 발레리노 로로로
12. 보네카 암발라부
13. 보브리토 반디토
14. 봄바르디로 크로코딜로
15. 봄봄비니 구지니
16. 부르발로니 룰릴롤리
17. 브르르 브르르 파타핌
18. 브리 브리 비쿠스 디쿠스 봄비쿠스
19. 블루베리니 옥토푸시니
20. 오 딘딘딘딘 둔 마 딘딘딘 둔
21. 오랑구티니 아나나시니
22. 일 칵토 히포포타모
23. 지라파 첼레스테
24. 지브라 주브라 지브라리니
25. 침판지니 바나니니
26. 카푸치노 아사시노
27. 코코판토 엘레판토
28. 크로코딜도 페니시니
29. 타 타 타 타 타 타 타 타 타 타 타 사후르
30. 퉁 퉁 퉁 퉁 퉁 퉁 퉁 퉁 퉁 사후르
31. 트랄랄레로 트랄랄라
32. 트래코투코툴루 델라펠라두스투즈
33. 트룰리메로 트룰리치나
34. 트리피 트로피1
35. 트리피 트로피2
36. 트릭 트랙 바라붐
37. 티그룰리 그레이프루투니
38. 티그룰리니 워터멜리니
39. 팟 핫스팟
40. 프룰리 프룰라
41. 프리고 카멜로

## 🛠️ **개발 정보**

### 사용된 패키지
- `flutter_launcher_icons: ^0.13.1` - 앱 아이콘 생성
- `shared_preferences: ^2.2.2` - 데이터 저장
- `gal: ^2.3.0` - 이미지 갤러리 저장
- `permission_handler: ^11.3.1` - 권한 관리
- `path_provider: ^2.1.4` - 파일 경로 관리
- `http: ^1.1.0` - HTTP 요청

### 권한 설정
```xml
<!-- Android 권한 -->
<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
```

### 빌드 환경
- **Flutter SDK**: 3.5.5+
- **Dart SDK**: 3.5.5+
- **Android NDK**: 27.0.12077973 (권장)
- **최소 Android API**: 21 (Android 5.0)

## 🎨 **디자인 특징**

### 앱 아이콘
- **파일 형식**: PNG (고품질)
- **배경색**: 흰색 (#ffffff)
- **스타일**: 어댑티브 아이콘 지원
- **해상도**: 48x48 ~ 192x192 다중 해상도

### UI/UX
- **컬러 테마**: 브레인롯 캐릭터에 어울리는 밝고 재미있는 색상
- **타이포그래피**: 읽기 쉬운 한글 폰트
- **레이아웃**: 직관적이고 사용하기 쉬운 인터페이스

## 🐛 **알려진 이슈**
- Android NDK 버전 경고 메시지 (기능에는 영향 없음)
- 일부 구형 Android 기기에서 권한 요청 필요

## 📝 **업데이트 내역**
- **v1.7**: 새로운 앱 아이콘 적용 (앱아이콘.png)
- **v1.6**: 보네카 암발라부 앱 아이콘 적용
- **v1.5**: 스마트 추출 시스템 구현
- **v1.4**: 캐릭터 정보 캡처 시스템
- **v1.3**: 이미지 저장 기능 추가
- **v1.2**: 차트 코드 시스템
- **v1.1**: 히트 시스템 개선
- **v1.0**: 초기 버전

## 🔧 **v1.7 기술적 세부사항**

### 아이콘 변경 과정
1. `pubspec.yaml`에서 `image_path` 변경
2. `flutter pub run flutter_launcher_icons:main` 실행
3. 모든 해상도 아이콘 자동 생성
4. 어댑티브 아이콘 및 colors.xml 업데이트

### 파일 크기 변화
- v1.6: 23.9MB
- v1.7: 24.1MB (0.2MB 증가)

### 성능 최적화
- Material Icons 폰트 트리 쉐이킹 적용
- 99.8% 폰트 크기 감소 (1.6MB → 2.6KB)

---

**🎮 새로운 아이콘으로 더욱 특별해진 브레인롯 수학게임을 즐겨보세요! 📚✨** 